# pok

./: .gitignore  README.md
examples/mutexes/: meson.build
examples/mutexes/kernel/: deployment.h  meson.build
examples/mutexes/pr1/: libpok  meson.build
examples/mutexes/pr2/: cross_file.txt  meson.build
kernel/: deployment.h  meson.build  tmp.h
kernel/arch/x86/: meson.build
kernel/arch/x86/x86-qemu/: meson.build
kernel/core/: meson.build
kernel/drivers/: meson.build
kernel/libc/: meson.build
kernel/middleware/: meson.build
libpok/: cross_file.txt  deployment.h  meson.build
libpok/arch/: meson.build
libpok/arch/x86/: meson.build
libpok/arinc653/: meson.build
libpok/core/: meson.build
libpok/drivers/: meson.build
libpok/include/: arch.h  string.h  types.h
libpok/libc/: meson.build
libpok/libc/misc/: meson.build
libpok/libc/stdio/: meson.build
libpok/libc/stdlib/: meson.build
libpok/libc/string/: meson.build
libpok/libc/string/x86/: meson.build
libpok/libm/: meson.build
libpok/middleware/: meson.build
libpok/protocols/: meson.build
libpok/protocols/blowfish/: meson.build
libpok/protocols/ceasar/: meson.build
libpok/protocols/des/: meson.build
misc/: execution_test.py
testsuite/unitary_tests/: Makefile
