src += files([
    	'acos.c',
		'acosf.c',
		'acosh.c',
		'acoshf.c',
		'asinh.c',
        'asinhf.c',
		'atanh.c',
		'atanhf.c',
		'asin.c',
		'asinf.c',
		'atan2.c',
		'atan2f.c',
        'atan.c',
        'atanf.c',
        'cbrt.c',
        'cbrtf.c',
        'ceil.c',
        'ceilf.c',
        'copysign.c',
        'copysignf.c',
        'cos.c',
        'cosf.c',
		'cosh.c',
		'coshf.c',
		'drem.c',
		'dremf.c',
		'exp.c',
		'expf.c',
		'e_acos.c',
		'e_acosf.c',
		'e_acosh.c',
		'e_acoshf.c',
		'e_asin.c',
		'e_asinf.c',
		'e_atan2.c',
		'e_atan2f.c',
		'e_atanh.c',
		'e_atanhf.c',
		'e_cosh.c',
		'e_coshf.c',
		'e_exp.c',
		'e_expf.c',
		'e_fmod.c',
		'e_fmodf.c',
		'e_hypot.c',
		'e_hypotf.c',
		'e_j0.c',
		'e_j0f.c',
		'e_j1.c',
		'e_j1f.c',
		'e_jn.c',
		'e_jnf.c',
		'e_lgamma_r.c',
		'e_lgammaf_r.c',
		'e_log.c',
		'e_log10.c',
		'e_log10f.c',
		'e_log2.c',
		'e_log2f.c',
		'e_logf.c',
		'e_pow.c',
		'e_powf.c',
		'e_rem_pio2.c',
		'e_rem_pio2f.c',
		'e_remainder.c',
		'e_remainderf.c',
		'e_scalb.c',
		'e_scalbf.c',
		'e_sinh.c',
		'e_sinhf.c',
		'e_sqrt.c',
		'e_sqrtf.c',
		'k_cos.c',
		'k_cosf.c',
		'k_rem_pio2.c',
		'k_rem_pio2f.c',
		'k_sin.c',
		'k_sinf.c',
		'k_standard.c',
		'k_tan.c',
		'k_tanf.c',
		'erf.c',
		'erff.c',
		'expm1.c',
		'expm1f.c',
		'fabs.c',
		'fabsf.c',
		'finite.c',
		'finitef.c',
		'floor.c',
		'floorf.c',
		'fmod.c',
		'fmodf.c',
		'fpclassify.c',
		'frexp.c',
		'frexpf.c',
		'gamma.c',
		'gammaf.c',
		'gamma_r.c',
		'gammaf_r.c',
		'hypot.c',
		'hypotf.c',
		'infinity.c',
		'ilogb.c',
		'ilogbf.c',
		'isnan.c',
		'isnanf.c',
		'j0.c',
		'j0f.c',
		'j1.c',
		'j1f.c',
		'jn.c',
		'jnf.c',
		'ldexp.c',
		'ldexpf.c',
		'log.c',
		'logf.c',
		'log2.c',
		'log2f.c',
		'log1p.c',
		'log1pf.c',
		'lgamma.c',
		'lgammaf.c',
		'lgamma_r.c',
		'lgammaf_r.c',
		'log10.c',
		'log10f.c',
		'matherr.c',
		'modf.c',
		'modff.c',
		'nextafter.c',
		'nextafterf.c',
		'pow.c',
		'powf.c',
		'remainder.c',
		'remainderf.c',
		'rint.c',
		'rintf.c',
		'round.c',
		'roundf.c',
		'scalbf.c',
		'scalb.c',
		'scalbn.c',
		'scalbnf.c',
		'signgam.c',
		'significand.c',
		'significandf.c',
		'sin.c',
		'sinf.c',
		'sinh.c',
		'sinhf.c',
        'sqrt.c',
        'sqrtf.c',
        'tan.c',
        'tanf.c',
        'tanh.c',
        'tanhf.c',
		'trunc.c',
		'truncf.c'
])