src += files([
    'blackboardcreate.c',
	'blackboardclear.c',
	'blackboarddisplay.c',
	'blackboardid.c',
	'blackboardstatus.c',
	'blackboardinit.c',
	'blackboardread.c',
	'bufferinit.c',
	'bufferid.c',
	'bufferstatus.c',
	'buffersend.c',
	'bufferreceive.c',
	'buffercreate.c',
	'portsamplingcreate.c',
	'portsamplingread.c',
	'portsamplingwrite.c',
	'portqueueingcreate.c',
	'portqueueingreceive.c',
	'portqueueingsend.c',
	'portvirtualcreate.c',
	'portvirtualdestination.c',
	'portvirtualnbdestinations.c',
	'portvirtualgetglobal.c',
	'portvirtualutils.c',
	'ressources.c'
])